Details
-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.12.0
-
None
-
3
-
9223372036854775807
Description
lustre-release/lustre/lfsck/lfsck_striped_dir.c: In function ‘lfsck_read_stripe_lmv’:
/root/qian/LSOM/dom/lustre-release/lustre/lfsck/lfsck_striped_dir.c:871:30: error: ‘LMV_HASH_FLAG_DEAD’ undeclared (first us
!(lmv->lmv_hash_type & LMV_HASH_FLAG_DEAD)))
^
lustre-release/lustre/lfsck/lfsck_striped_dir.c:871:30: note: each undeclared identifier is reported onl
lustre-release/lustre/lfsck/lfsck_striped_dir.c: At top level:
cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]
This build problem is same as LU-9995 :lbuild error: 'LMV_HASH_FLAG_DEAD' undeclared (first use in this function)
https://review.whamcloud.com/#/c/35318/ has removed this flag, this ticket can be closed after landing the patch.