LU-11511 fix build breakage with LMV_HASH_FLAG_DEAD undeclared

It was being deprecated with 2.11.56, but actually 2.8 was waaay too
recent to kill it like that, let's postpone this until 2.12.53 for now
and definitely let's fix it by then.

Change-Id: Ibfc2cd858803e7802536041775fb09ae6960f211
Signed-off-by: Oleg Drokin <green@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/33356
Tested-by: Jenkins